--- a/Data_Prep.ipynb
+++ b/Data_Prep.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "## Let us use *pandas* to combine quarterly datasets for the years 2018 and 2019 each into a single dataset.\n",
-    "We will combine the total of 8 datasets containing millions of records individually into a single dataset containing upto 2 million records, so that the Tableau Public dashboard works at relatively faster speed. It will also take care of 15 million records limit of Tableau public."
+    "We will combine the total of 8 datasets containing millions of records individually into a single dataset containing upto 2 million records, so that the Tableau Public dashboard works at relatively faster speed. It will also take care of 15 million records limit of Tableau public. \n",
+    "\n",
+    "Data downloaded from [Divvy Official website]( https://divvybikes.com/system-data)"
    ]
   },
   {
@@ -714,7 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Everything looks correct*. We **did not check** for the **'accuracy' and 'consistency' of values in the individual fields.** The same would be verified at the time of loading the data into a postgreSQL database using *constraints*.  \n",
+    "### Everything looks correct*. We **did not check** for the **'accuracy' and 'consistency' of values in the individual fields.** The same would be verified before and at the time of loading the data into a postgreSQL database using **constraints**.  \n",
     "### Now, we will repeat the above steps for the data on remaining quarters of 2018."
    ]
   },
@@ -1733,6 +1735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Great! No NULLS in the important columns. We can ignore the NULLS in the columns containing values for 'Gender' and 'Birthyear'.\n",
     "### We will now create a combined dataset for the year 2018."
    ]
   },
@@ -2039,6 +2042,102 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 365069 entries, 0 to 365068\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count   Dtype  \n",
+      "---  ------             --------------   -----  \n",
+      " 0   trip_id            365069 non-null  int64  \n",
+      " 1   start_time         365069 non-null  object \n",
+      " 2   end_time           365069 non-null  object \n",
+      " 3   bikeid             365069 non-null  int64  \n",
+      " 4   tripduration       365069 non-null  object \n",
+      " 5   from_station_id    365069 non-null  int64  \n",
+      " 6   from_station_name  365069 non-null  object \n",
+      " 7   to_station_id      365069 non-null  int64  \n",
+      " 8   to_station_name    365069 non-null  object \n",
+      " 9   usertype           365069 non-null  object \n",
+      " 10  gender             345358 non-null  object \n",
+      " 11  birthyear          347046 non-null  float64\n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 33.4+ MB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1108163 entries, 0 to 1108162\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count    Dtype  \n",
+      "---  ------             --------------    -----  \n",
+      " 0   trip_id            1108163 non-null  int64  \n",
+      " 1   start_time         1108163 non-null  object \n",
+      " 2   end_time           1108163 non-null  object \n",
+      " 3   bikeid             1108163 non-null  int64  \n",
+      " 4   tripduration       1108163 non-null  object \n",
+      " 5   from_station_id    1108163 non-null  int64  \n",
+      " 6   from_station_name  1108163 non-null  object \n",
+      " 7   to_station_id      1108163 non-null  int64  \n",
+      " 8   to_station_name    1108163 non-null  object \n",
+      " 9   usertype           1108163 non-null  object \n",
+      " 10  gender             922609 non-null   object \n",
+      " 11  birthyear          927210 non-null   float64\n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 101.5+ MB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1640718 entries, 0 to 1640717\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count    Dtype  \n",
+      "---  ------             --------------    -----  \n",
+      " 0   trip_id            1640718 non-null  int64  \n",
+      " 1   start_time         1640718 non-null  object \n",
+      " 2   end_time           1640718 non-null  object \n",
+      " 3   bikeid             1640718 non-null  int64  \n",
+      " 4   tripduration       1640718 non-null  object \n",
+      " 5   from_station_id    1640718 non-null  int64  \n",
+      " 6   from_station_name  1640718 non-null  object \n",
+      " 7   to_station_id      1640718 non-null  int64  \n",
+      " 8   to_station_name    1640718 non-null  object \n",
+      " 9   usertype           1640718 non-null  object \n",
+      " 10  gender             1353368 non-null  object \n",
+      " 11  birthyear          1362624 non-null  float64\n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 150.2+ MB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 704054 entries, 0 to 704053\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count   Dtype  \n",
+      "---  ------             --------------   -----  \n",
+      " 0   trip_id            704054 non-null  int64  \n",
+      " 1   start_time         704054 non-null  object \n",
+      " 2   end_time           704054 non-null  object \n",
+      " 3   bikeid             704054 non-null  int64  \n",
+      " 4   tripduration       704054 non-null  object \n",
+      " 5   from_station_id    704054 non-null  int64  \n",
+      " 6   from_station_name  704054 non-null  object \n",
+      " 7   to_station_id      704054 non-null  int64  \n",
+      " 8   to_station_name    704054 non-null  object \n",
+      " 9   usertype           704054 non-null  object \n",
+      " 10  gender             637463 non-null  object \n",
+      " 11  birthyear          642373 non-null  float64\n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 64.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the datasets\n",
+    "df_2019Q1.info()\n",
+    "df_2019Q2.info()\n",
+    "df_2019Q3.info()\n",
+    "df_2019Q4.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Sample the datasets\n",
@@ -2050,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2315,7 +2414,7 @@
        "[954502 rows x 12 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2336,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2738,7 @@
        "[1855272 rows x 12 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2670,7 +2769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NEXT, we will create a database in postgreSQL and load this data into it."
+    "### NEXT, we will create a database in postgreSQL and load this data into it. We will also 'Clean' and 'Transform' data as needed."
    ]
   }
  ],
